OPA_gatekeeper/soc2_framework/test-soc2-violation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: soc2-violation-pod
spec:
  containers:
  - name: greedy-container
    image: nginx
    # Yahan resources: limits missing hain
